--- a/index.html
+++ b/index.html
@@ -46,56 +46,75 @@
   </head>
 
   <body>
-    <section class="colored-section" id="title">
+    <section id="title">
+      <!-- Nav Bar -->
 
       <div class="container-fluid">
-  
-        <!-- Nav Bar -->
-  
         <nav class="navbar navbar-expand-lg navbar-dark">
-  
-          <a class="navbar-brand" href="">tindog</a>
-  
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-              <span class="navbar-toggler-icon"></span>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
           </button>
-  
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-  
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#footer">Contact</a>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="#" style="font-size: 2.5rem;">tinDog</a>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#pricing">Pricing</a>
+                <a class="nav-link" href="#">Contact</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#cta">Download</a>
-              </li>
+              <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Download
+                  </a>
+                  <ul
+                    class="dropdown-menu dropdown-menu-end"
+                    aria-labelledby="navbarDropdown"
+                  >
+                    <li>
+                      <a class="dropdown-item" href="#">Download Android</a>
+                    </li>
+                    <li><a class="dropdown-item" href="#">Download iOS</a></li>
+                  </ul>
+                </li>
+              </ul>
             </ul>
-  
           </div>
         </nav>
-  
-  
-        <!-- Title -->
-  
+
         <div class="row">
-  
           <div class="col-lg-6">
-            <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-            <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+            <h1 id="titles">Meet new and interesting dogs nearby.</h1>
+            <button type="button" class="btn btn-dark btn-lg down">
+              <i class="fa-brands fa-apple"></i> Download
+            </button>
+            <button type="button" class="btn btn-outline-light btn-lg down">
+              <i class="fa-brands fa-apple"></i> Download
+            </button>
           </div>
-  
           <div class="col-lg-6">
-            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+            <img class="tit-img" src="images/iphone6.png" alt="iphone-mockup" />
           </div>
-  
         </div>
-  
       </div>
-  
+
+      <!-- Title -->
     </section>
 
     <!-- Features -->
